--- a/code/mini-review.Rmd
+++ b/code/mini-review.Rmd
@@ -28,7 +28,7 @@ today <- format(Sys.time(), "%Y%m%d"); today ## "%Y%m%d%H%M"
 ```{r include=FALSE}
 csv_dir <- "./data/covidence_export/data extraction/"
 csv <- "review_278532_20230305161741-test mini-review-analysis.csv"
-csv <- "review_278532_20230318025032.csv"
+csv <- "review_278532_20230328115335.csv"
 df <- readr::read_csv(file = paste0(csv_dir, csv))
 ```
 
@@ -158,7 +158,99 @@ dt.bytool.clean <- expand_col_to_long(data = dt.bytool, target_col = "Tool") %>%
 
 
 
+```{r - by region map}
+region <- dt %>%
+  dplyr::select(1, Country) %>%
+  dplyr::filter(!is.na(Country)) %>%
+  dplyr::filter(!Country %in% c('m', 'NA', 'Global', 'Europe', 'all over the world')) %>%
+  dplyr::mutate(
+    Country = case_when(
+      str_detect(string = Country, pattern = 'Scotland|UK') ~ 'United Kingdom',
+      str_detect(string = Country, pattern = 'Indonasia') ~ 'Indonesia',
+      str_detect(string = Country, pattern = 'Malasia') ~ 'Malaysia',
+      str_detect(string = Country, pattern = 'Danmark') ~ 'Denmark',
+      str_detect(string = Country, pattern = 'Beigium') ~ 'Belgium',
+      str_detect(string = Country, pattern = 'Brasil') ~ 'Brazil',
+      str_detect(string = Country, pattern = 'Chili') ~ 'Chile',
+      T ~ Country)
+    )
+
+
+library(SDGdetector)
+packageVersion('SDGdetector')
+
+library(dplyr)
+library(stringr)
+library(ggplot2)
+library(cowplot)
+
+
+codelist.supp <- data.frame(
+  country.name.en = c('USA'),
+  iso3c = c('USA')
+)
+codelist <- SDGdetector::codelist_panel %>%
+  dplyr::distinct(country.name.en, iso3c) %>%
+  rbind(., codelist.supp) %>%
+  dplyr::mutate(
+    country.name.en = case_when(
+      str_detect(string = iso3c, pattern = 'HKG') ~ 'Hong Kong',
+      T ~ country.name.en)
+  ) %>%
+  dplyr::distinct(country.name.en, iso3c)
+  
+shp <- SDGdetector::shp
+
+
+dt_match <- region %>%
+  merge(x = ., 
+        y = codelist, 
+        by.x = 'Country', 
+        by.y = 'country.name.en', all.x = T) %>%
+  arrange(!is.na(iso3c))
+
+
+region_count <- dt_match %>%
+  group_by(iso3c) %>%
+  tally()
+```
+
+
+```{r - by region map}
+
+dt_sf <- region_count %>%
+  merge(x= shp, y = ., by.x = 'iso_a3', by.y  = 'iso3c', all.x = T) 
+
+
+dt_sf %>%
+  dplyr::filter(name != 'Antarctica') %>%
+  ggplot(.) +
+  geom_sf(aes(fill = n), size = 0.1, color = 'gray80') +
+  # geom_sf_text(aes(label = iso_a3), colour = "gray", size =1) + 
+  scale_fill_distiller(name= 'Count', palette = 'YlGnBu', direction = 1, na.value = "gray90") +
+  # theme_bw() +
+  theme_nothing() +
+  theme(legend.position = c(0.06, 0.4))
+
+fname <- paste0(dir.fig, 'mini-review_paper_count_', 'map.png'); fname
+ggsave(filename = fname, plot = last_plot(), width = 6.4*2, height = 3.2*2, units = 'in', dpi = 300)
+```
+
+
 # Viz
+
+## proregss
+```{r}
+dt %>%
+  group_by(Reviewer) %>%
+  tally() %>%
+  ggplot(aes(x = reorder(Reviewer, n), y = n)) +
+  geom_col() +
+  geom_text(aes(label = n), vjust = 0.5, hjust = 0, color = 'gray20') +
+  coord_flip() +
+  theme_bw()
+```
+
 
 ## Count by indicator
 
@@ -180,8 +272,12 @@ dt.bymhi.clean %>%
 
 fname <- paste0(dir.fig, "mini-review_mh_freq_", today, ".png")
 ggsave(filename = fname, plot = last_plot(), width = 16 / 2, height = 9 / 2, units = "in", dpi = 300, bg = NULL)
+```
 
 
+## Count by tool
+
+```{r}
 dt.bytool.clean %>%
   dplyr::slice_max(order_by = n, n = 20) %>%
   plot_freq(data = ., var = 'Tool') +
